Add email service implimentation

--- a/external_blimpit_projects/emailservice/pom.xml
+++ b/external_blimpit_projects/emailservice/pom.xml
@@ -9,6 +9,15 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
+    <dependencies>
+        <dependency>
+            <groupId>javax.mail</groupId>
+            <artifactId>mail</artifactId>
+            <version>1.4</version>
+            <type>jar</type>
+        </dependency>
+    </dependencies>
+
     <artifactId>emailservice</artifactId>
 
 
